# super-chess

./: .gitignore  Dockerfile  README.md  docker-compose.yml
apps/server/: Cargo.toml
apps/server/migrations/: 001_initial.sql  002_email.sql
apps/server/src/: email.rs  main.rs
apps/server/src/auth/: middleware.rs  mod.rs
apps/server/src/db/: mod.rs  models.rs
apps/server/src/game/: messages.rs  mod.rs  room.rs  room_manager.rs
apps/server/src/routes/: auth.rs  comments.rs  likes.rs  mod.rs  variants.rs  ws.rs
apps/web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
apps/web/public/: .htaccess
apps/web/src/: App.tsx  index.css
apps/web/src/components/: AuthBar.tsx
apps/web/src/components/chess/: Board.tsx  BoardThumbnail.tsx  EditorBoard.tsx
apps/web/src/contexts/: WebSocketContext.tsx
apps/web/src/hooks/: useBoardSize.ts  useChessEngine.ts  useTouchDrag.ts  useWebSocket.ts
apps/web/src/lib/: api.ts  constants.ts  convert.ts  sounds.ts
apps/web/src/pages/: AccountSettings.tsx  CreateRoom.tsx  Editor.tsx  ForgotPassword.tsx  Home.tsx  Login.tsx  Multiplayer.tsx  Register.tsx  ResetPassword.tsx  Room.tsx  Singleplayer.tsx  VariantBrowser.tsx  VariantDetail.tsx  VerifyEmail.tsx
apps/web/src/prebuilt_games/: big_chess.json  holy_chess.json  index.ts  micro_chess.json  mini_chess.json  pawn_storm.json  standard_chess.json
apps/web/src/stores/: authStore.ts  editorStore.ts  gameStore.ts  settingsStore.ts
apps/web/src/types/: api.ts  chess.ts
deploy/: .env.example  README.md  build-on-vps.sh
deploy/web/: index.html
deploy/web/assets/: index-Ck5kiFL2.js  index-DnBnSe4g.css
(+3 files in other folders)
