[package]
name = "protochess-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
adjective_adjective_animal = "0.1"
futures-util = "0.3"
lazy_static = "1.4"

protochess-engine-rs = { path = "../../packages/engine" }
protochess-common = { path = "../../packages/common" }
