[package]
name = "protochess-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
adjective_adjective_animal = "0.1"
futures-util = "0.3"
lazy_static = "1.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
jsonwebtoken = "9"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
rand = "0.8"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }

protochess-engine-rs = { path = "../../packages/engine" }
protochess-common = { path = "../../packages/common" }
